2007-06-26  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed bad reference to leftright.png

	* src/boards/shapegame.c: (add_shape_to_list_of_shapes):

2007-06-24  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed a major bug, target activity is broken, the target never reach it's goal.

	* src/boards/target.c: (animate_items):

2007-06-23  Bruno coudoin  <bruno.coudoin@free.fr>

	- Now we don't crash if we cannot find a single image at startup.

	* src/gcompris/bar.c: (gc_bar_set_repeat_icon), (gc_bar_set),
	(gc_bar_hide):
	* src/gcompris/board.c: (get_board_playing):
	* src/gcompris/dialog.c: (gc_dialog):
	* src/gcompris/gameutil.c: (gc_pixmap_load):

2007-06-22  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed "-l list" option to load the menu list from the base.
	option was not working when boards are compiled statically.

	* src/gcompris/gcompris.c:

2007-06-20  Bruno coudoin  <bruno.coudoin@free.fr>

	Improved --help message for gcompris -l list

	* src/gcompris/gcompris.c:

2007-06-19  Bruno coudoin  <bruno.coudoin@free.fr>

	- Typo replacement. Replaced gcompris in GCompris, our official name.

	* boards/menu.xml.in:
	* boards/pythontemplate.xml.in:
	* boards/pythontest.xml.in:
	* src/boards/chess.c: (start_board):
	* src/boards/click_on_letter.c: (sounds_are_fine):
	* src/boards/python.c:
	* src/boards/python/pythontest.py:
	* src/gcompris/board.c: (gc_board_init):
	* src/gcompris/config.c:
	* src/gcompris/gcompris.c: (gc_terminate):

2007-06-16  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/boards2static.pl: removed, uneeded
	* src/boards/python.c: (pythonboard_end): WARNING
	    FIXME: COMMENTED Py_Finalize() BECAUSE THIS MAKES GCOMPRIS CRASHES AFTER ENTERING/EXITING
            ANY PHYTHON PLUGIN LESS THAN 10 TIMES

	* src/boards/python/chat.py: fixed cleanup, was crashing randomly on exit
	* src/boards/python/pythontemplate.py: created an python activity for developers
	* boards/pythontemplate.xml.in: -
